# carch_project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  how_to_use_spike_for_testing.txt  spike_install_mac.txt  todo  wtf.txt
.devcontainer/: devcontainer.json
demo/: branch_predictor.s  dual_issue_pipelined.s  pipeline_hazards_showcase.s  pipelined_dual_issue.s  pipelined_single_cycle.s  triple_issue_pipelined.s
include/: command_handler.h  config.h  globals.h  main.h  sim_state.h  utils.h  vm_asm_mw.h
include/assembler/: code_generator.h  elf_util.h  parser.h
include/common/: instructions.h
include/gui/: gui_common.h  gui_console.h  gui_editor.h  gui_execute.h  gui_main.h  gui_memory.h  gui_processor_window.h  gui_register.h  gui_set_processor_type.h  gui_stats.h
include/vm/: alu.h  control_unit_base.h  instruction_context.h  main_memory.h  memory_controller.h  refactor.txt  registers.h  vm_base.h  vm_main.h
include/vm/decoder/: decoder_helper.h  rv5s_decode_unit.h
include/vm/dual_issue/: vm.h
include/vm/dual_issue/core/: core.h
include/vm/dual_issue/core/instruction_context/: instruction_context.h
include/vm/dual_issue/executor/: executor.h
include/vm/dual_issue/hardware/: commit_buffer.h  data_bus.h  decode_helper.h  decode_unit.h  reg_status_file.h  reservation_station.h
include/vm/dual_issue/stages/: stages.h
include/vm/instruction_context/: instr_context.h
include/vm/rv5s/: instruction_context.h  rv5s_vm.h  vm.h
include/vm/rv5s/core/: core.h
include/vm/rv5s/core/instruction_context/: instruction_context.h
include/vm/rv5s/decoder/: decoder_helper.h  rv5s_decode_unit.h
include/vm/rv5s/executor/: executor.h
include/vm/rv5s/hardware/: branch_predictor.h  decode_helper.h  decode_unit.h  hazard_detector.h
include/vm/rv5s/instruction_context/: instr_context.h
include/vm/rv5s/pipelined/: vm.h
include/vm/rv5s/pipelined/branch_predictor/: branch_predictor.h
include/vm/rv5s/pipelined/core/: core.h
include/vm/rv5s/pipelined/core/instruction_context/: instruction_context.h
include/vm/rv5s/pipelined/executor/: executor.h
include/vm/rv5s/pipelined/hardware/: branch_predictor.h  decode_helper.h  decode_unit.h  hazard_detector.h
include/vm/rv5s/pipelined/stages/: stages.h
include/vm/rv5s/single_cycle/: vm.h
include/vm/rv5s/single_cycle/core/: core.h
include/vm/rv5s/single_cycle/core/instruction_context/: instruction_context.h
include/vm/rv5s/single_cycle/executor/: executor.h
include/vm/rv5s/single_cycle/hardware/: decode_helper.h  decode_unit.h
include/vm/rv5s/single_cycle/stages/: stages.h
include/vm/rv5s/stages/: stages.h
include/vm/rv5s_modularized/: vm.h
include/vm/rv5s_modularized/core/: core.h
include/vm/rv5s_modularized/core/instruction_context/: instruction_context.h
include/vm/rvss/: rvss_vm.h
include/vm/triple_issue/: vm.h
include/vm/triple_issue/core/: core.h
include/vm/triple_issue/core/instruction_context/: instruction_context.h
include/vm/triple_issue/executor/: executor.h
include/vm/triple_issue/hardware/: commit_buffer.h  decode_unit.h
include/vm/triple_issue/stages/: stages.h
src/: command_handler.cpp  globals.cpp  main.cpp  sim_stage.cpp  utils.cpp
src/assembler/: assembler.cpp  elf_util.cpp  lexer.cpp  parser.cpp
src/assembler/parse_formats/: csr_formats.cpp  f_d_formats.cpp  i_m_formats.cpp  pseudo_formats.cpp
src/common/: instructions.cpp
src/gui/: gui_common.cpp  gui_console.cpp  gui_editor.cpp  gui_execute.cpp  gui_main.cpp  gui_memory.cpp  gui_processor_window.cpp  gui_register.cpp  gui_set_processor_type.cpp  gui_stats.cpp  wtf.txt
src/gui_imp/: gui_main.cpp  test.cpp
src/vm/: alu.cpp  main_memory.cpp  registers.cpp  vm_base.cpp  vm_main.cpp
src/vm/decoder/: decoder_helper.cpp  rv5s_decode_unit.cpp
src/vm/dual_issue/: vm.cpp
src/vm/dual_issue/core/: core.cpp
src/vm/dual_issue/core/instruction_context/: instruction_context.cpp
src/vm/dual_issue/executor/: executor.cpp
src/vm/dual_issue/hardware/: commit_buffer.cpp  data_bus.cpp  decode_helper.cpp  decode_unit.cpp  reg_status_file.cpp  reservation_station.cpp  reservation_status.cpp
src/vm/dual_issue/stages/: decode.cpp  execute.cpp  fetch.cpp  issue.cpp  mem.cpp  write_back.cpp
src/vm/rv5s/: rv5s_vm.cpp  vm.cpp
src/vm/rv5s/branch_predictor/: branch_predictor.cpp
src/vm/rv5s/core/: core.cpp
src/vm/rv5s/decoder/: decoder_helper.cpp  rv5s_decode_unit.cpp
src/vm/rv5s/executor/: executor.cpp  pipelined.cpp  single_cycle.cpp
src/vm/rv5s/hardware/: branch_predictor.cpp  decode_helper.cpp  decode_unit.cpp  hazard_detector.cpp
src/vm/rv5s/pipelined/: hazard_detection_and_forwarding.cpp  pipelined.cpp  vm.cpp
src/vm/rv5s/pipelined/branch_predictor/: branch_predictor.cpp
src/vm/rv5s/pipelined/core/: core.cpp
src/vm/rv5s/pipelined/executor/: executor.cpp
src/vm/rv5s/pipelined/hardware/: branch_predictor.cpp  decode_helper.cpp  decode_unit.cpp  hazard_detector.cpp
src/vm/rv5s/pipelined/stages/: decode.cpp  execute.cpp  fetch.cpp  mem.cpp  write_back.cpp
src/vm/rv5s/single_cycle/: single_cycle.cpp  vm.cpp
src/vm/rv5s/single_cycle/core/: core.cpp
src/vm/rv5s/single_cycle/executor/: executor.cpp
src/vm/rv5s/single_cycle/hardware/: decode_helper.cpp  decode_unit.cpp
src/vm/rv5s/single_cycle/stages/: decode.cpp  execute.cpp  fetch.cpp  mem.cpp  write_back.cpp
src/vm/rv5s/stages/: decode.cpp  exec.cpp  execute.cpp  fetch.cpp  mem.cpp  writeback.cpp
src/vm/rv5s_modularized/executor/: pipelined.cpp  single_cycle.cpp
src/vm/rv5s_modularized/stages/: decode.cpp  execute.cpp  mem.cpp
src/vm/rvss/: rvss_vm.cpp
src/vm/triple_issue/: vm.cpp
src/vm/triple_issue/core/: core.cpp
src/vm/triple_issue/executor/: executor.cpp
src/vm/triple_issue/hardware/: commit_buffer.cpp  decode_unit.cpp
src/vm/triple_issue/stages/: decode.cpp  execute.cpp  fetch.cpp  issue.cpp  mem.cpp  writeback.cpp
tests/: branch_prediction.s  dual_issue.s  generic.s  pipeline.s
third_party_licenses/: INEXTENDED_SIM_LICENSE
